--- a/src/static/copcut.css
+++ b/src/static/copcut.css
@@ -1,7 +1,36 @@
+#changingtext {
+	position: relative;
+	background-size: 100%;
+	background: rgb(1,1,1);
+	overflow: hidden;
+	height: 100%;
+	padding: 25% 0;
+	color: white;
+}
+
+#changingtext:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.1;
+	background-image: url('/pics/barber.jpg');
+    background-repeat: no-repeat;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+
 .initial-bg{
 	height: 100%;
 	padding: 0;
-	background-color: rgba(0,0,0,0.7);
 }
 .initial-bg-heading{
 	font-size:5vw;
@@ -11,13 +40,14 @@
 	margin:0 0 3% 0;
 }
 .header-width-left{
-	position: absolute;
+	position: relative;
 	top: 30%;
 	left: 10%;
 	width: 60%;
 }
 .form-group{
-	width: 50%;
+	position: relative;
+	z-index: 100000;
 	display: inline-block;
 }
 #typed-strings h1{
