--- a/src/app/application.handlebars
+++ b/src/app/application.handlebars
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="/global.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oxygen" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/typed.css"/>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
  	
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +29,11 @@
 			</div>
 	</footer>
 </body>
+
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="/typed.js" type="text/javascript"></script>
 <script type="text/javascript" src="/copcut.js"></script>
 <script type="text/javascript" src="/app.js"></script>
 </html>
+
