--- a/src/static/global.css
+++ b/src/static/global.css
@@ -39,8 +39,9 @@ a:hover,a:visited{
 }
 #header.header{
 	background-color: white;
-	z-index: 5;
+	z-index: 100000000000;
 	position: fixed;
+
 	box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
 }
 #header.header a{
