--- a/src/app/application.handlebars
+++ b/src/app/application.handlebars
@@ -30,6 +30,23 @@
 	</footer>
 </body>
 
+<script type="text/javascript">
+	window.__initialState__ = {
+		authenticated: {{{ authenticated }}},
+		user: 
+			{{#if user }}
+			{
+				{{#each user}}
+					{{@key}}: "{{this}}",
+				{{/each}}
+				lol: true
+			}
+			{{else}}
+			  	null
+			{{/if}}
+
+	};
+</script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="/typed.js" type="text/javascript"></script>
